--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="script.js">
-    <script type="text/javascript" async="" src="./Personal Portfolio Website_files/vfddbfpd5chs.js.download"></script><script src="./Personal Portfolio Website_files/a076d05399.js.download"></script><script src="blob:https://krishangupta-2d088.web.app/d5569125-9a03-427b-b7f2-cdc8bcb53f5f"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />    <script src="./Personal Portfolio Website_files/a076d05399.js.download"></script>
+    <script src="blob:https://krishangupta-2d088.web.app/d5569125-9a03-427b-b7f2-cdc8bcb53f5f"></script>
     <script src="./Personal Portfolio Website_files/jquery-3.5.1.min.js.download"></script>
     <script src="./Personal Portfolio Website_files/typed.min.js.download"></script>
     <script src="./Personal Portfolio Website_files/jquery.waypoints.min.js.download"></script>
@@ -86,9 +87,11 @@
             </div>
             <div class="column right">
                 <div class="text">I'm Krishan and I'm a <span class="typing-2">Web-Designer</span><span class="typed-cursor typed-cursor--blink">|</span></div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
+                <p>I’m exploring various areas of software development and enjoy building web projects that bring together creativity and technology. I’m particularly interested in how design and functionality work hand-in-hand to create meaningful user experiences.
+                <br>Currently, I’m working with <b>Nexus Club VIT Chennai</b>, a backend-focused club, where I’m gaining hands-on experience in server-side development, APIs, and database management. I’m also an active member of the <b>Cloud Ops Club, VIT Chennai</b>, where I’m learning about cloud infrastructure, deployment, and scalable applications.
+                <br>My current goal is to deepen my understanding of backend development and Java while contributing to open-source projects that challenge me to grow as a developer.</p>
 
-                <a>Download CV</a></div>
+                <a href="resume.pdf" download>Download CV</a></div>
         </div>
     </div>
 
@@ -101,24 +104,23 @@
         <div class="serv-content">
             <div class="card">
                 <div class="box">
-                    <i class="fas fa-paint-brush"></i>
-                    <div class="text">Web Design</div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                    <i class="fas fa-object-group"></i>
+                    <div class="text">Frontend Development</div>
+                    <p>Creating responsive and intuitive web interfaces with HTML, CSS, and JavaScript.</p>
                 </div>
             </div>
             <div class="card">
                 <div class="box">
-                    <i class="fas fa-photo-video"></i>
-                    <div class="text">Photo Editing</div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                    <i class="fas fa-cogs"></i>
+                    <div class="text">Backend Logic</div>
+                    <p>Building server-side logic and APIs with Python and cloud services like Firebase.</p>
                 </div>
             </div>
             <div class="card">
                 <div class="box">
-                    <i class="fas fa-code"></i>
-                    <div class="text">Scratch Coding</div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-                </div>
+                    <i class="fas fa-rocket"></i>
+                    <div class="text">Web App Deployment</div>
+                    <p>Bringing projects to life online through seamless deployment with Git and Vercel.</p>
             </div>
         </div>
     </div>
@@ -131,9 +133,9 @@
         <h2 class="title">My skills</h2>
         <div class="skills-content">
             <div class="column left">
-                <div class="text">My creative skills &amp; experiences.</div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
-                <a href="https://krishangupta-2d088.web.app/#">Read more</a>
+                <div class="text">My Technical Journey</div>
+                <p>I thrive on turning concepts into reality through code. With a solid foundation in web technologies and Python, I'm now diving deep into backend development with Java. My club activities in backend and cloud operations are where I apply my learning to build practical skills and prepare for real-world challenges.</p>
+<!--              <a href="https://krishangupta-2d088.web.app/#">Read more</a>--> 
             </div>
             <div class="column right">
                 <div class="bars">
@@ -153,14 +155,14 @@
                 <div class="bars">
                     <div class="info">
                         <span>JavaScript</span>
-                        <span>20%</span>
+                        <span>40%</span>
                     </div>
                     <div class="line js"></div>
                 </div>
                 <div class="bars">
                     <div class="info">
                         <span>Python</span>
-                        <span>50%</span>
+                        <span>70%</span>
                     </div>
                     <div class="line php"></div>
                 </div>
@@ -183,7 +185,7 @@
         <div class="contact-content">
             <div class="column left">
                 <div class="text">Get in Touch</div>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                <p>Have a question or a project in mind? I'd love to hear from you. I'm passionate about technology and enjoy connecting with other developers, students, and professionals. Drop me a line, and let's start a conversation.</p>
                 <div class="icons">
                     <div class="row">
                         <i class="fas fa-user"></i>
@@ -195,15 +197,22 @@
                     <div class="row">
                         <i class="fas fa-map-marker-alt"></i>
                         <div class="info">
-                            <div class="head">Address</div>
-                            <div class="sub-title">Uttar Pradesh , India</div>
+                            <div class="head">Location</div>
+                            <div class="sub-title">Chennai , India</div>
                         </div>
                     </div>
                     <div class="row">
                         <i class="fas fa-envelope"></i>
                         <div class="info">
                             <div class="head">Email</div>
-                            <div class="sub-title">krishan.gupta2025@vitstudent.ac.in</div>
+                            <div class="sub-title"><a href="mailto:krishan.gupta2025@vitstudent.ac.in" style="color: rgb(73, 119, 219);">krishan.gupta2025@vitstudent.ac.in</a></div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <i class="fab fa-linkedin"></i>
+                        <div class="info">
+                            <div class="head">LinkedIn</div>
+                            <div class="sub-title"><a href="https://www.linkedin.com/in/krishangupta1607/" target="_blank" style="color: rgb(73, 119, 219); ">Krishan Gupta</a></div>
                         </div>
                     </div>
                 </div>
@@ -236,7 +245,7 @@
 
 <!-- footer section start -->
 <footer>
-    <span>Created By <a href="http://krishangupta.unaux.com/">Krishan Gupta</a> | <span class="far fa-copyright"></span> 2025 All rights reserved.</span>
+    <span>Created By <a href="https://www.linkedin.com/in/krishangupta1607/">Krishan Gupta</a> | <span class="far fa-copyright"></span> 2025 All rights reserved.</span>
 </footer>
 <script src="./Personal Portfolio Website_files/script.js.download"></script>
 
@@ -257,15 +266,3 @@
       50% { opacity: 0.0; }
       100% { opacity: 1; }
     }
-</style><div>
-    <div id="twoseven-ext-tab-media-modal" class="twoseven-ext-tab-media-modal" style="display: none;">
-        <!-- Modal content -->
-        <div class="twoseven-ext-tab-media-modal-content">
-            <div class="iframe-container">
-                <div class="close-container">
-                    <span class="close">×</span>
-                </div>
-                <iframe id="twoseven-ext-tab-media-iframe" src="./Personal Portfolio Website_files/index.html"></iframe>
-            </div>
-        </div>
-    </div><link rel="stylesheet" href="chrome-extension://cjdnfmjmdligcpfcekfmenlhiopehjkd/dist/contentScripts/views/modal/top-level.css"></div></body><div id="twoseven-scripts" data-info="Scripts added by TwoSeven extension" style="display: none !important; position: static !important; top: 0px !important; left: 0px !important; width: 0px !important; height: 0px !important;"></div></html>
