--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<!-- saved from url=(0043)https://krishangupta-2d088.web.app/#contact -->
-<html lang="en" webcrx="" style="--vsc-domain: &quot;krishangupta-2d088.web.app&quot;;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="script.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />    <script src="./Personal Portfolio Website_files/a076d05399.js.download"></script>
-    <script src="blob:https://krishangupta-2d088.web.app/d5569125-9a03-427b-b7f2-cdc8bcb53f5f"></script>
     <script src="./Personal Portfolio Website_files/jquery-3.5.1.min.js.download"></script>
     <script src="./Personal Portfolio Website_files/typed.min.js.download"></script>
     <script src="./Personal Portfolio Website_files/jquery.waypoints.min.js.download"></script>
@@ -52,13 +52,13 @@
 </div>
 <nav class="navbar sticky">
     <div class="max-width">
-        <div class="logo"><a href="https://krishangupta-2d088.web.app/#">Krishan<span>Gupta</span></a></div>
+        <div class="logo"><a href="#">Krishan<span>Gupta</span></a></div>
         <ul class="menu">
-            <li><a href="https://krishangupta-2d088.web.app/#home" class="menu-btn">Home</a></li>
-            <li><a href="https://krishangupta-2d088.web.app/#about" class="menu-btn">About</a></li>
-            <li><a href="https://krishangupta-2d088.web.app/#services" class="menu-btn">Services</a></li>
-            <li><a href="https://krishangupta-2d088.web.app/#skills" class="menu-btn">Skills</a></li>
-            <li><a href="https://krishangupta-2d088.web.app/#contact" class="menu-btn">Contact</a></li>
+            <li><a href="#home" class="menu-btn">Home</a></li>
+            <li><a href="#about" class="menu-btn">About</a></li>
+            <li><a href="#services" class="menu-btn">Services</a></li>
+            <li><a href="#skills" class="menu-btn">Skills</a></li>
+            <li><a href="#contact" class="menu-btn">Contact</a></li>
         </ul>
         <div class="menu-btn">
             <i class="fas fa-bars"></i>
