--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h2 class="title">About me</h2>
         <div class="about-content">
             <div class="column left">
-                <img src="image/face.png" alt="">
+                <img src="image/face.jpg" alt="">
             </div>
             <div class="column right">
                 <div class="text">I'm Krishan and I'm a <span class="typing-2">Web-Designer</span><span class="typed-cursor typed-cursor--blink">|</span></div>
