Website Data Changed

--- a/index.html
+++ b/index.html
@@ -135,7 +135,6 @@
             <div class="column left">
                 <div class="text">My Technical Journey</div>
                 <p>I thrive on turning concepts into reality through code. With a solid foundation in web technologies and Python, I'm now diving deep into backend development with Java. My club activities in backend and cloud operations are where I apply my learning to build practical skills and prepare for real-world challenges.</p>
-<!--              <a href="https://krishangupta-2d088.web.app/#">Read more</a>--> 
             </div>
             <div class="column right">
                 <div class="bars">
@@ -164,14 +163,21 @@
                         <span>Python</span>
                         <span>70%</span>
                     </div>
-                    <div class="line php"></div>
+                    <div class="line python"></div>
                 </div>
                 <div class="bars">
                     <div class="info">
                         <span>Java</span>
                         <span>25%</span>
                     </div>
-                    <div class="line mysql"></div>
+                    <div class="line java"></div>
+                </div>
+                <div class="bars">
+                    <div class="info">
+                        <span>C</span>
+                        <span>35%</span>
+                    </div>
+                    <div class="line c"></div>
                 </div>
             </div>
         </div>
@@ -245,7 +251,7 @@
 
 <!-- footer section start -->
 <footer>
-    <span>Created By <a href="https://www.linkedin.com/in/krishangupta1607/">Krishan Gupta</a> | <span class="far fa-copyright"></span> 2025 All rights reserved.</span>
+    <span>Created By <a href="https://www.linkedin.com/in/krishangupta1607/">Krishan Gupta</a> | <span class="far fa-copyright"></span> 2026 All rights reserved.</span>
 </footer>
 <script src="./Personal Portfolio Website_files/script.js.download"></script>
 
